# Luphonix-Blog

./: .gitignore  app.py  create_users.py  db.sqlite3  hidden.txt  manage.py  models.py  pyproject.toml  requirements.txt  settings.py
static/css/: animations.css  dark-mode.css  global.css  old_style.css  profile-comp.css  responsive.css  style.css  theme.css
static/js/: animations.js  dark-mode.js  initMobileMenu.js  main.js  mobile-menu.js  theme.js
templates/: about.html  base.html  blog.html  blog_post.html  contact.html  index.html  services.html  team.html
templates/partials/: footer.html  header.html  newsletter.html
templates/search/: search.html
wagtail_app/: __init__.py  apps.py  asgi.py  middleware.py  models.py  settings.py  signals.py  urls.py  views.py  wsgi.py
wagtail_app/blog/: __init__.py  apps.py  models.py  urls.py  views.py
wagtail_app/blog/migrations/: 0001_initial.py  0002_alter_blogpage_body.py  0003_alter_blogpage_body.py  0004_alter_blogpage_body.py  0005_alter_blogpage_body.py
wagtail_app/blog/templatetags/: blog_filters.py
wagtail_app/home/: __init__.py  apps.py  models.py
wagtail_app/home/migrations/: 0001_initial.py
wagtail_app/templates/: base.html  profile_completion.html
wagtail_app/templates/blog/: blog_index_page.html  blog_page.html  tag_page.html
wagtail_app/templates/home/: about_page.html  contact_page.html  home_page.html  services_page.html
wagtail_app/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  (+3 more)
your_app/: prompt.txt
(+3 files in other folders)
